# new-bl-sdk-mods

./: LICENSE  README.md
bpd_useful_commands/: ReadMe.md  bpd_useful_commands.sdkmod
bpd_useful_commands/bpd_useful_commands/: __init__.py  pyproject.toml
bpd_useful_commands/bpd_useful_commands/exemples/: TestSkillBPD.blcm  convert_to_vector_exemple.blcm  register_skills_event_exemple.blcm  register_skills_event_exemple.py
bpd_useful_commands/bpd_useful_commands/modules/: bpd_events.py  convert_bpd_variable.py  structs.py  utils.py
early_skill_points/: Info  README.md  __init__.py  early_skill_points.sdkmod  pyproject.toml
no_main_menu_rotation/: README.md  __init__.py  no_main_menu_rotation.sdkmod  pyproject.toml
object_relocator/: ReadMe.md  object_relocator.sdkmod
object_relocator/object_relocator/: HOW_TO_USE.md  __init__.py  editor.py  inputs.py  keybinds.py  options.py  pickup.py  pyproject.toml  relocator.py  write.py
open_sesame/: README.md  __init__.py  open_sesame.sdkmod  pyproject.toml
