[project]
name = "bpd_useful_commands"
version = "1"
authors = [{ name = "Zazk0u" }]
description = """
Utility library for BPDs. \n
- Run custom BPD events from python with custom outputs.
- Converts VariableData's variable to another type, like a BVAR_Object to a BVAR_Vector using the new convert_bpd_variable command.
- Debug a BPD's VariableData using the new log_bpd / log_path_bpd commands on a live object to log all its variables in the console.
"""
dependencies = [
  "command_extensions >= 3.0",
]

[project.urls]
Repository = "https://github.com/Zazk0u/new-bl-sdk-mods"
Changelog = "https://github.com/Zazk0u/new-bl-sdk-mods/tree/main/bpd_useful_commands"

[tool.sdkmod]
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
name = "BPD Useful Commands"
download = "https://raw.githubusercontent.com/Zazk0u/new-bl-sdk-mods/refs/heads/main/bpd_useful_commands/bpd_useful_commands.sdkmod"
supported_games = ["BL2", "TPS"]
