[project]
name = "object_relocator"
version = "1.42"
authors = [{ name = "Zazk0u" }]
description = """
Tool to help with map editing.\n
Pickup, move and rotate a static map object, then release it to log its infos to a file in the mod folder.\n
The log contain the object's new location and rotation values.\n
Allow blcm hotfixes to modify StaticMeshCollectionActor's StaticMeshComponents / StaticMeshActor / Handplaced WillowInteractiveObject and more.\n
Added new console commands (check out HOW_TO_USE.md).

"""
dependencies = [
  "uemath >= 1.0",
]


[project.urls]
Repository = "https://github.com/Zazk0u/new-bl-sdk-mods"
Changelog = "https://github.com/Zazk0u/new-bl-sdk-mods/tree/main/object_relocator"
HowToUse = "https://github.com/Zazk0u/new-bl-sdk-mods/blob/main/object_relocator/object_relocator/HOW_TO_USE.md"

[tool.sdkmod]
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
name = "Object Relocator"
download = "https://raw.githubusercontent.com/Zazk0u/new-bl-sdk-mods/refs/heads/main/object_relocator/object_relocator.sdkmod"
supported_games = ["BL2", "TPS"]
